# gamecore

./: README.md  pyproject.toml
notebooks/: analyse_sweep.ipynb
notebooks/tutorials/: 1_core.ipynb  2_logging.ipynb  3_sweep_runner.ipynb
src/gamecore/: __init__.py  groebner.py  solver.py  system_trajectory.py
src/gamecore/cost/: base_cost.py  quadratic_cost.py
src/gamecore/factories/: __init__.py  cost_factory.py  game_factory.py  player_factory.py  strategy_factory.py  system_factory.py
src/gamecore/game/: base_game.py  lq_game.py
src/gamecore/player/: base_player.py  lq_player.py
src/gamecore/strategy/: base_strategy.py  linear_strategy.py
src/gamecore/system/: base_system.py  linear_system.py
src/gamecore/utils/: logger.py  sweep_runner.py  utils.py
tests/: conftest.py  test_cost.py  test_game.py  test_groebner.py  test_logger.py  test_player.py  test_solver.py  test_strategy.py  test_sweep_runner.py  test_system.py  test_system_trajectory.py
tests/test_factories/: test_cost_factory.py  test_game_factory.py  test_player_factory.py  test_strategy_factory.py  test_system_factory.py
