[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gamecore"
version = "0.1.0"
description = "Core abstractions for dynamic and differential games"
authors = [{name = "Felix Thömmes"}]
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "json",
    "os",
    "shutil",
    "itertools",
    "traceback",
    "time",
    "sympy",
    "dataclasses",
    "abc",
    "datetime",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]
